YDM-30 // cleaned the code, added finding movies by tag id, fixed response in find movie controller, changed tagId to param from header, added integration test,